# crypto-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
config/: config.example.yaml
config/profiles/: adaptive.yaml  aggressive.yaml  balanced.yaml  conservative.yaml  dca.yaml  trend.yaml
docs/: DERIVATIVES.md  STRATEGY_GUIDE.md
src/crypto_bot/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/crypto_bot/backtest/: __init__.py  engine.py  metrics.py
src/crypto_bot/core/: __init__.py  broker.py  engine.py  models.py  portfolio.py
src/crypto_bot/exchanges/: __init__.py  base.py  ccxt_adapter.py  factory.py
src/crypto_bot/indicators/: __init__.py  ta.py
src/crypto_bot/risk/: __init__.py  manager.py
src/crypto_bot/strategies/: __init__.py  base.py  bollinger.py  breakout.py  dca.py  funding_bias.py  ma_crossover.py  macd.py  regime.py  registry.py  rsi_reversion.py  supertrend.py  trend_ls.py
tests/: conftest.py  test_backtest.py  test_bollinger.py  test_breakout.py  test_config.py  test_dca.py  test_derivatives_engine.py  test_engine.py  test_funding_bias.py  test_indicators.py  test_ma_crossover.py  test_macd.py  test_paper_broker.py  test_portfolio.py  test_regime.py  test_risk.py  test_rsi_reversion.py  test_shorts.py  test_supertrend.py  test_trend_ls.py
