[build-system]
requires = ["setuptools>=83.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot"
version = "0.1.0"
description = "Multi-exchange crypto trading bot (Binance, Bybit, Coinbase) with paper-trading-first safety."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert Ngo" }]
dependencies = [
    "ccxt>=4.5.67",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.15.22"]

[project.scripts]
crypto-bot = "crypto_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
